--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
+main{
+	width:150px;
+	height:150px;
+	background:#000000;
+	color:#ffffff;
+	margin-left:32px;
+	padding:10px;
 
+}
 /* Your CSS Code here. */
