--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,12 @@ main{
 	width:150px;
 	height:150px;
 	background:#000000;
+	
+
+}
+.helloaccio{
 	color:#ffffff;
 	margin-left:32px;
 	padding:10px;
-
 }
 /* Your CSS Code here. */
